Add `--add-exports`